<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/app_title"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:layout_marginBottom="10dp"
            android:background="#1E5128"
            android:fontFamily="sans-serif-light"
            android:paddingStart="10dp"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:text="@string/tip_time"
            android:textColor="@color/white"
            android:textFontWeight="600"
            android:textSize="20sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="RtlSymmetry"
            tools:targetApi="p" />


        <ImageView
            android:id="@+id/icon_cost_of_service"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:importantForAccessibility="no"
            android:paddingTop="20dp"
            android:paddingEnd="10dp"
            android:paddingBottom="10dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/app_title"
            app:srcCompat="@drawable/ic_store"
            tools:ignore="RtlSymmetry" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/cost_of_service"
            android:layout_width="160dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="50dp"
            android:hint="@string/cost_of_service"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/app_title">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/cost_of_service_edit_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="numberDecimal"
                tools:ignore="TouchTargetSizeCheck,SpeakableTextPresentCheck" />

        </com.google.android.material.textfield.TextInputLayout>


        <ImageView
            android:id="@+id/icon_store"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:importantForAccessibility="no"
            android:paddingTop="15dp"
            android:paddingEnd="10dp"
            android:paddingBottom="10dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/icon_cost_of_service"
            app:srcCompat="@drawable/ic_service"
            tools:ignore="RtlSymmetry" />

        <TextView
            android:id="@+id/service_question"
            style="@style/Widget.TipTime.TextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="50dp"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:text="@string/how_was_the_service"
            android:textSize="16sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/cost_of_service" />

        <RadioGroup
            android:id="@+id/tip_option"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="50dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/service_question">

            <RadioButton
                android:id="@+id/amazing_service"
                style="@style/Widget.TipTime.TextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/amazing_20"
                android:textSize="16sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tip_option" />

            <RadioButton
                android:id="@+id/good_service"
                style="@style/Widget.TipTime.TextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/good_18"
                android:textSize="16sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/amazing_service" />

            <RadioButton
                android:id="@+id/okay_service"
                style="@style/Widget.TipTime.TextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/okay_15"
                android:textSize="16sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/good_service" />
        </RadioGroup>

        <ImageView
            android:id="@+id/icon_round_up"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:importantForAccessibility="no"
            android:paddingTop="10dp"
            android:paddingEnd="10dp"
            android:paddingBottom="10dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tip_option"
            app:srcCompat="@drawable/ic_round_up"
            tools:ignore="RtlSymmetry" />

        <com.google.android.material.switchmaterial.SwitchMaterial
            android:id="@+id/roundup_question"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="50dp"
            android:layout_marginRight="16dp"
            android:minHeight="48dp"
            android:text="@string/round_up_tip"
            android:textSize="16sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tip_option"
            tools:ignore="RtlHardcoded,VisualLintButtonSize" />

        <Button

            android:id="@+id/calculate_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="50dp"
            android:layout_marginEnd="16dp"
            android:background="@drawable/rounded_corner"
            android:text="@string/calculate"
            android:textColor="@color/white"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/roundup_question"
            tools:ignore="VisualLintButtonSize" />

        <TextView
            android:id="@+id/tip_amount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="16dp"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/calculate_button"
            tools:text="Tip amount: $10" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>